# tiles-bot

./: .env  .env.example  .env.local  .env.local.example  .gitignore  CASPER-INTEGRATION-NEEDS.md  CLAUDE.md  DESIGN.md  README.md  backup-db.sh  bonding-curve-analysis.js  ccc-log.sh  ccc-task-log.sh  check-domains.mjs  domain-research.md  hardhat.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  project-rules.md
cache/: solidity-files-cache.json
contracts/: MillionBotHomepage.sol  MockERC20.sol
contracts/casper/: .gitignore  Cargo.toml  Odra.toml  README.md  TESTNET-DEPLOYMENT.md
contracts/casper/scripts/: .env.testnet  .env.testnet.example  deploy-devnet.sh  deploy-odra-livenet.sh  deploy-testnet.sh  deploy.sh  test-mint.sh  verify-deployment.sh
contracts/casper/src/: bonding_curve.rs  errors.rs  events.rs  lib.rs  mock_wcspr.rs  tiles_bot_nft.rs
contracts/casper/tests/: common.rs  deploy_livenet.rs  test_admin.rs  test_batch_claim.rs  test_bonding_curve.rs  test_claim.rs  test_e2e_x402_flow.rs  test_metadata.rs
contracts/casper/wasm/: MockWcspr.wasm  TilesBotNft.wasm
docs/: CASPER-TESTNET-DEPLOYMENT.md  CSPR-PRICING-MILESTONES.md  FEATURE-INVENTORY.md  INTERACTION-IDEAS.md  MULTI-CHAIN-ANALYSIS.md  architecture.md  ctf-cron-setup.md  multichain-launch-announcement.md  opensea-launch-runbook.md  requirements.md  sqlite-load-baseline.md  structured-log-monitoring.md  tower-defense-setup.md
e2e/: single-chain-session.spec.ts  smoke.spec.ts
openclaw-skill/: SKILL.md
public/: robots.txt
scripts/: audit-route-registry.js  (+9 more)
(+238 files in other folders)
