[package]
name = "tiles-bot-nft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
odra = { version = "2.7.0", default-features = false }
odra-modules = { version = "2.7.0", default-features = false }

[dev-dependencies]
odra-test = { version = "2.7.0", default-features = false }
odra-casper-livenet-env = { version = "2.7.0", default-features = false }

[build-dependencies]
odra-build = { version = "2.7.0", default-features = false }

[features]
default = []

[[bin]]
name = "tiles_bot_nft_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "tiles_bot_nft_build_schema"
path = "bin/build_schema.rs"
test = false

[profile.release]
codegen-units = 1
lto = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 3
